@@ -1,5 +1,10 @@
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* SVNUpdater.cs: Don't crash if we get an invalid
+	author from the svn server.
+
+2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* SVNUpdater.cs: Fix eol.
 
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
